--- a/index.css
+++ b/index.css
@@ -4,8 +4,18 @@
   box-sizing: border-box;
 }
 
+.menu-checkbox{
+  position: absolute;
+  top: 0;
+  left: 0;
+
+}
+.menu-checkbox:checked ∼ .page-aside {
+  width: 100vh;
+}
+
 .page {
-  height: 200vh;
+  height: 100vh;
   /* background-color: aqua; */
   display: grid;
   grid-template:
@@ -27,6 +37,7 @@
   align-items: flex-start;
   /* align-items: center; */
   color: white;
+  place-items: center;
 }
 
 .youtube-logo {
@@ -112,6 +123,7 @@
   display: grid;
   grid-auto-flow: row;
   border-bottom: 1px solid;
+  
 }
 
 .li-list {
@@ -123,16 +135,19 @@
 }
 
 .page-main {
-  /* height: 200px; */
-  /* grid-area: page-main; */
-  background-color: rgba(166, 255, 0, 0.459);
+  /* background-color: rgba(166, 255, 0, 0.459); */
   display: grid;
   grid-template-columns: repeat( 4, minmax(250px, 1fr) );
-  /* align-items: center; */
-  /* grid-gap: ; */
+  /* overflow: hidden; */
+  grid-gap: 10px;
+  
 
 }
 
 .video {
-  outline: 4px solid rgb(207, 25, 25);
+  display: grid;
+  overflow: hidden;
+  place-content: center;
+  
+  
 }
