--- a/index.css
+++ b/index.css
@@ -4,17 +4,32 @@
   box-sizing: border-box;
 }
 
-.menu-checkbox{
+.menu-checkbox {
+  margin: 7px;
   position: absolute;
-  top: 0;
+  top: 6px;
   left: 0;
-
+  
 }
-.menu-checkbox:checked ∼ .page-aside {
+
+/* .menu-checkbox:checked
+  ~ .page-aside
+  > .sidebar-navigation
+  > .navigation-list
+  > ul
+  > li
+  > p {
+   display: none; 
   width: 100vh;
+  z-index: 2;
+} */
+
+.menu-checkbox:checked ~ li > p {
+  display: none;
 }
 
 .page {
+
   height: 100vh;
   /* background-color: aqua; */
   display: grid;
@@ -99,7 +114,6 @@
 .suggestions-link {
   text-decoration: none;
   color: black;
-  
 }
 
 .categories {
@@ -110,13 +124,15 @@
   /* background-color: rgba(81, 128, 128, 0.438); */
   transition: 0.5s;
 }
- .categories:hover{
+.categories:hover {
   background-color: #788a80;
-} 
+}
 
 .page-aside {
+  padding: 5px;
   grid-area: page-aside;
   background-color: rgba(137, 43, 226, 0.521);
+  
 }
 
 .ul-list-item {
@@ -135,19 +151,17 @@
 }
 
 .page-main {
+  position: relative;
   /* background-color: rgba(166, 255, 0, 0.459); */
   display: grid;
-  grid-template-columns: repeat( 4, minmax(250px, 1fr) );
+  grid-template-columns: repeat(4, minmax(250px, 1fr));
   /* overflow: hidden; */
   grid-gap: 10px;
-  
-
+  /* border: 1px solid blue; */
 }
 
 .video {
   display: grid;
   overflow: hidden;
   place-content: center;
-  
-  
 }
