--- a/index.css
+++ b/index.css
@@ -9,7 +9,6 @@
   position: absolute;
   top: 6px;
   left: 0;
-  
 }
 
 /* .menu-checkbox:checked
@@ -29,7 +28,6 @@
 }
 
 .page {
-
   height: 100vh;
   /* background-color: aqua; */
   display: grid;
@@ -37,22 +35,18 @@
     "page-aside page-header " 60px
     "page-aside sub-header" 50px
     "page-aside page-main " 1fr/
-    0.1fr 1fr;
+    0.01fr 1fr;
 }
 
 .page-header {
-  /* background-color: hsl(0deg 0% 9%); */
   grid-area: page-header;
   display: grid;
   grid-template-columns: 200px 200px 200px 200px;
   justify-content: space-around;
-  /* grid-gap: 80rem; */
   grid-gap: 90px;
-
-  align-items: flex-start;
-  /* align-items: center; */
   color: white;
-  place-items: center;
+  /* place-items: center; */
+  align-items: center;
 }
 
 .youtube-logo {
@@ -70,18 +64,29 @@
 .searchbar {
   display: grid;
   grid-auto-flow: column;
-  outline: 1px solid red;
-  background-color: rgb(138, 103, 172);
-  width: 500px;
+  /* background-color: rgb(138, 103, 172); */
+  width: 200px;
+  color: black;
+  /* outline: 1px solid red; */
+}
+
+.searchbar-inside:focus {
+  outline: none;
 }
 .searchbar-inside {
-  width: 400px;
+  /* background-color: #3da0f5; */
+}
+
+.magnifying-glass {
+  border: 1px solid;
+  /* background-color: #f5773d; */
 }
 
 .voice {
   color: black;
-  display: grid;
-  grid-auto-flow: column;
+  /* display: grid; */
+  /* grid-auto-flow: column; */
+  /* padding-right: 70px; */
 }
 
 .sign-in {
@@ -109,6 +114,7 @@
   grid-gap: 20px;
   padding-left: 20px;
   /* background-color: #3da0f5; */
+  justify-items: center;
 }
 
 .suggestions-link {
@@ -118,40 +124,56 @@
 
 .categories {
   border: 1px solid;
-  border-radius: 30px;
-  text-align: center;
-  /* color: hsl(0deg 0% 100%); */
-  /* background-color: rgba(81, 128, 128, 0.438); */
+  border-radius: 100000px;
+  display: grid;
+
+  place-items: center;
+
   transition: 0.5s;
+  height: 40px;
+  padding: 10px 30px;
+  /* width: 100px; */
+
+  /* background-color: #788a80; */
 }
 .categories:hover {
-  background-color: #788a80;
+  background-color: #d5ebdf;
 }
 
 .page-aside {
   padding: 5px;
   grid-area: page-aside;
-  background-color: rgba(137, 43, 226, 0.521);
-  
+  /* background-color: rgba(137, 43, 226, 0.521); */
+}
+
+.navigation-list {
+  display: grid;
+  /* grid-auto-flow: row; */
+  grid-gap: 100px;
+  place-content: center;
+  margin-right: 10px;
 }
 
 .ul-list-item {
   display: grid;
-  grid-auto-flow: row;
+  /* grid-auto-flow: row; */
   border-bottom: 1px solid;
-  
+  grid-gap: 50px;
+  place-content: center;
 }
 
 .li-list {
-  display: grid;
-  grid-auto-flow: column;
+  /* display: grid; */
+  /* grid-auto-flow: column; */
   /* align-items: center; */
   /* justify-items: center; */
   padding: 1px;
+  /* outline: 1px solid black; */
+  
 }
 
 .page-main {
-  position: relative;
+  /* position: relative; */
   /* background-color: rgba(166, 255, 0, 0.459); */
   display: grid;
   grid-template-columns: repeat(4, minmax(250px, 1fr));
@@ -160,11 +182,22 @@
   /* border: 1px solid blue; */
 }
 
-.video {
+.video-section {
   display: grid;
-  overflow: hidden;
-  place-content: center;
+  grid-gap: 10px;
 
+}
+.post-info{
+  display: grid;
+  grid-auto-flow: column;
+  grid-gap: 10px;
+}
+
+
+
+.user-stats{
+  display: grid;
+  place-content: center;
 }
 
 .image-post{
@@ -174,7 +207,7 @@
 
 
 .icon-post{
-  height: 20px;
-  width: 20px;
-
+  border-radius: 50%;
+  height: 60px;
+  width: 40px;
 }
